<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/main_act_parent_marg_right"
    android:layout_marginLeft="@dimen/main_act_parent_marg_left"
    android:layout_marginRight="@dimen/main_act_parent_marg_right"
    android:layout_marginStart="@dimen/main_act_parent_marg_left"
    android:layout_marginTop="@dimen/main_act_parent_marg_top"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.example.nikolas.booklist.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero_height"
        android:layout_weight="3"
        android:src="@drawable/books"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_book_name"
            android:inputType="textCapSentences" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/give_book_name"
        android:gravity="center"
        android:layout_marginTop="@dimen/error_text_view_marg_top"
        android:textSize="@dimen/error_font_size"
        android:visibility="invisible" />

</LinearLayout>
